<resources>
    <string name="app_name">PC022110103421100885</string>
    <string name="valtvLoginTitle">LOGIN</string>
    <string name="valetEmail">Enter email</string>
    <string name="valetPwd">Enter password</string>
    <string name="valbtnLogin">INICIAR SESIÓN</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_registro">Registro</string>
    <string name="menu_resumen">Resumen</string>
    <string name="valetfecha">Ingrese Fecha</string>
    <string name="valetDesc">Ingrese Descripcion</string>
    <string name="valetMonto">Ingrese Monto</string>
    <string name="valbtnRegistro">GUARDAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>